<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_home"
        />

    <EditText
        android:id="@+id/inputBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
        android:textSize="30sp"
        android:imeOptions="actionSend"
        android:ellipsize="start"
        android:inputType="textMultiLine"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/sendMorse"
        style="@style/main_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        app:layout_constraintTop_toBottomOf="@id/inputBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/checkOrientation"
        style="@style/main_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_orientation"
        app:layout_constraintTop_toBottomOf="@id/sendMorse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/displayOrientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title"
        android:textColor="@color/purple_700"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkOrientation"
        />


    <Button
        android:id="@+id/goPreset"
        style="@style/nav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_presents"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/goInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/goInfo"
        style="@style/nav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_info"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/goPreset"
        app:layout_constraintRight_toRightOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>