<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/presetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preset_header"
        style="@style/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addPresetRow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/presetTitle">

        <cse340.finalproject.PresetList
            android:id="@+id/presetList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </ScrollView>

    <!-- from a3 activity_edit_requests.xml code -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPresetRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/add"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_preset"/>

    <Button
        android:id="@+id/goMain"
        style="@style/nav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_main"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>